--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -140,6 +140,11 @@
             <option value="4">4 </option>
             <option value="5">5 (strongly agree)</option>
         </select>
+
+        <br>
+        <br>
+
+        <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"></i>Submit</button>
     </div>
 </body>
 
