--- a/app/public/survey.html
+++ b/app/public/survey.html
@@ -71,7 +71,7 @@
         </select>
 
         <h3 class="question"><b>Question 4</b></h3>
-        <h4>Enjoy like playing video games...</h4>
+        <h4>Enjoy playing video games...</h4>
         <select class="selectpicker" id="q4" title="Pick one that applies most">
             <option value="1">1 (strongly disagree)</option>
             <option value="2">2 </option>
@@ -145,6 +145,15 @@
         <br>
 
         <button type="submit" class="btn btn-primary btn-lg btn-block" id="submit"><i class="fa fa-check-circle"></i>Submit</button>
+    
+        <hr>
+
+        <footer class="footer">
+            <div class="container">
+                  <p><a href="/api/friends" target="_blank">API Friends List</a> | <a href="https://github.com/Mjimenez05/Friend--Finder" target="_blank">GitHub Repo</a></p>
+            </div>
+          </footer>
+    
     </div>
 </body>
 
